--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         </section>
 
         <section class="interests">
+            <button id="toggle-btn">Hide My Interests</button>
             <h2>My Interests</h2>
-            <ul>
+            <ul id="interests-list">
                 <li>Cybersecurity</li>
                 <li>Cloud Computing</li>
                 <li>Guitar</li>
@@ -34,6 +35,9 @@
     </main>
 
     <footer>
+        <button id="contact-btn">Show My Email</button>
+        <p id="email-display"></p>
+
         <p>&copy; 2025 Caden Medsger</p>
         <p>
             <a href="https://www.linkedin.com">Find me on LinkedIn</a> | 
@@ -41,5 +45,6 @@
         </p>
     </footer>
     </div>
+<script src="js/main.js"></script>
 </body>
 </html>
